--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-image-magnify": "^2.7.4",
     "react-medium-image-zoom": "^5.3.0",
     "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5",
     "router": "^2.2.0"
   },
   "devDependencies": {
